--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,7 @@ code {
 
 @font-face {
   font-family: 'Rethink Sans';
-  src: url('./assets/fonts/RethinkSans-Regular.ttf') format('ttf'),
-       url('./assets/fonts/RethinkSans-Regular.ttf') format('ttf');  
+  src: url('./assets/fonts/RethinkSans-Regular.ttf') format('truetype');
   font-weight: 400; /* Or the correct weight */
   font-style: normal;
   font-display: swap; /* Improves loading perception */
@@ -33,8 +32,7 @@ code {
 
 @font-face {
   font-family: 'Rethink Sans';
-  src: url('./assets/fonts/RethinkSans-Bold.ttf') format('ttf'), 
-       url('./assets/fonts/RethinkSans-Bold.ttf') format('ttf'); 
+  src: url('./assets/fonts/RethinkSans-Bold.ttf') format('truetype');
   font-weight: 700; /* Or the correct weight */
   font-style: normal;
   font-display: swap;
